Implement a dynamic array based stack and tests for both stack types